# libnm-qt5

./: CMakeLists.txt  NetworkManagerQt-export.h  NetworkManagerQt5.pc.cmake  accesspoint.h  activeconnection.h  adsldevice.h  bluetoothdevice.h  bonddevice.h  bridgedevice.h  connection.h  device.h  dhcp4config.h  dhcp6config.h  infinibanddevice.h  ipaddress.h  ipconfig.h  iproute.h  macros.h  manager.h  modemdevice.cpp  modemdevice.h  olpcmeshdevice.h  secretagent.h  settings.h  utils.h  vlandevice.h  vpnconnection.h  vpnplugin.h  wimaxdevice.h  wimaxnsp.h  wireddevice.h  wirelessdevice.h  wirelessnetwork.h
include/: CMakeLists.txt
settings/: adslsetting.h  bluetoothsetting.h  bondsetting.h  bridgeportsetting.h  bridgesetting.h  cdmasetting.h  connectionsettings.h  gsmsetting.h  infinibandsetting.h  ipv4setting.h  ipv6setting.h  olpcmeshsetting.h  pppoesetting.h  pppsetting.h  security8021xsetting.h  serialsetting.h  setting.h  vlansetting.h  vpnsetting.h  wimaxsetting.h  wiredsetting.h  wirelesssecuritysetting.h  wirelesssetting.h
tests/: CMakeLists.txt
